Add Java 16+ improvements (#17)
* Add Java 16+ improvements.

* Refactor unused code, use records, add equality tests.

* Add license headers.

* Add codecov settings file.