@@ -31,7 +31,6 @@ import javafx.concurrent.Task;
 import java.io.File;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 public class ImageMetaDataLoadingService extends IoService<ImageMetaDataLoadingResult> {
     private final ObjectProperty<File> source = new SimpleObjectProperty<>(this, "source");
@@ -44,10 +43,6 @@ public class ImageMetaDataLoadingService extends IoService<ImageMetaDataLoadingR
 
     public void setSource(File source) {
         this.source.set(source);
-    }
-
-    public List<File> getImageFiles() {
-        return imageFiles.get();
     }
 
     public void setImageFiles(List<File> imageFiles) {
@@ -88,7 +83,7 @@ public class ImageMetaDataLoadingService extends IoService<ImageMetaDataLoadingR
 
                     final List<File> validImageFiles =
                             imageFiles.get().stream().filter(item -> fileNameToMetaDataMap.containsKey(item.getName()))
-                                      .collect(Collectors.toList());
+                                      .toList();
 
                     return new ImageMetaDataLoadingResult(fileNameToMetaDataMap.size(), errorInfoEntries,
                                                           validImageFiles,
